[package]
name = "pg_waldecoder"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_waldecoder"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies.pgrx]
path = "/home/sora/git-repos/pgrx/pgrx"

[dependencies]
# pgrx = "=0.16.1"
thiserror = "2.0.17"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.rust]
unused = "allow"
dead_code = "allow"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unreadable_literal = "allow"
cast_ptr_alignment = "allow"
# missing_errors_doc = "allow"
# missing_panics_doc = "allow"
# module_name_repetitions = "allow"
# blocks_in_conditions = "allow"
# must_use_candidate = "allow"
# no-effect-underscore-binding = "allow"
# items-after-statements = "allow"
